--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
     <a href="students/marty_mcfly.html">
       <img width="304" height="304" class="prof-image" src="img/students/marty_mcfly_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
     </a>
+    <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>Doc Brown</h3>
+                  </div>
+                  <p class="home-blog-post-meta">"Great Scott!"</p>
+                </div>
+                <div class="clear"></div>
+
+                <div class="excerpt">
+                  <p>Doctor Emmett Lathrop "Doc" Brown was the inventor of the DeLorean time machine. Doc's role models were scientists, as evidenced by the names of his dogs and the portraits of Isaac Newton and Albert Einstein found inside his laboratory.</p>
+                </div>
+                <div class="clear"></div>
+              </li>
   </div>
  
 ... (MORE CODE) ...
