--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </a>
     <div class="blog-title">
                   <div class="big-comment">
-                    <h3>Doc Brown</h3>
+                    <h3>Marty McFly</h3>
                   </div>
-                  <p class="home-blog-post-meta">"Great Scott!"</p>
+                  <p class="home-blog-post-meta">"Nobody calls me a chicken!" </p>
                 </div>
                 <div class="clear"></div>
 
