--- a/index.html
+++ b/index.html
@@ -92,25 +92,13 @@
 
               <!-- Begin Profile -->
               <li class="home-blog-post">
-  <div class="blog-thumb">
-    <a href="students/marty_mcfly.html">
-      <img width="304" height="304" class="prof-image" src="img/students/marty_mcfly_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
-    </a>
-    <div class="blog-title">
-                  <div class="big-comment">
-                    <h3>Marty McFly</h3>
-                  </div>
-                  <p class="home-blog-post-meta">"Nobody calls me a chicken!" </p>
-                </div>
-                <div class="clear"></div>
-
-                <div class="excerpt">
-                  <p>Doctor Emmett Lathrop "Doc" Brown was the inventor of the DeLorean time machine. Doc's role models were scientists, as evidenced by the names of his dogs and the portraits of Isaac Newton and Albert Einstein found inside his laboratory.</p>
-                </div>
-                <div class="clear"></div>
-              </li>
+                <div class="blog-thumb">
+                <a href="students/marty_mcfly.html">
+                  <img width="304" height="304" class="prof-image" src="img/students/marty_mcfly_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="marty mcfly">
+                </a>
+    
   </div>
- 
+ </li>
 ... (MORE CODE) ...
  
 </li>
