--- a/index.html
+++ b/index.html
@@ -96,10 +96,14 @@
                 <a href="students/marty_mcfly.html">
                   <img width="304" height="304" class="prof-image" src="img/students/marty_mcfly_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="marty mcfly">
                 </a>
-    
-  </div>
- </li>
-... (MORE CODE) ...
+            </div>
+            <div class="blog-title">
+                  <div class="big-comment">
+                    <h3>Marty McFly</h3>
+                  </div>
+                  <p class="home-blog-post-meta">"Nobody calls me a chicken!"</p>
+                </div>
+                <div class="clear"></div>
  
 </li>
               <!-- End Profile -->
